# ros2_control_demos

./: README.md
doc/: index.rst
example_9/bringup/config/: rrbot_controllers.yaml
example_9/bringup/launch/: rrbot_gazebo_classic.launch.py
example_9/description/ros2_control/: rrbot.ros2_control.xacro
example_XX/: CMakeLists.txt  README.md  package.xml  plugins.xml  sidestep.csv  sidestep_low_left.csv  sidestep_low_right.csv  sidestep_up_left.csv  sidestep_up_right.csv  swingdown.csv  swingup.csv
example_XX/bringup/config/: cart_pole_controllers.yaml  plotjuggler.xml
example_XX/bringup/launch/: cart_pole.launch.py
example_XX/controller/: cartpole_lqr_trajectory_plugin.cpp  cartpole_lqr_trajectory_plugin_parameters.yaml
example_XX/controller/include/ros2_control_demo_example_xx/: cartpole_lqr_trajectory_plugin.hpp  visibility_control.h
example_XX/description/gazebo/: cart_pole.gazebo.xacro
example_XX/description/launch/: view_robot.launch.py
example_XX/description/ros2_control/: cart_pole.ros2_control.xacro
example_XX/description/urdf/: cart_pole.urdf.xacro
example_XX/doc/: userdoc.rst
example_XX/scripts/: trajectory_action_client.py
ros2_control_demo_bringup/launch/: test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py  three_robots.launch.py
ros2_control_demo_description/: CMakeLists.txt
ros2_control_demo_description/cart_pole/rviz/: cart_pole.rviz
ros2_control_demo_description/cart_pole/urdf/: cart_pole_description.urdf.xacro
ros2_control_demo_description/rrbot_description/urdf/: rrbot_system_position_only.urdf.xacro
